--- a/app/src/main/res/layout/activity_complete_profile.xml
+++ b/app/src/main/res/layout/activity_complete_profile.xml
@@ -64,6 +64,7 @@
                 android:layout_marginTop="@dimen/_20sdp"
                 android:clickable="true"
                 android:focusable="true"
+                android:visibility="visible"
                 app:cardCornerRadius="@dimen/_500sdp">
 
                 <ImageView
@@ -72,6 +73,17 @@
                     android:layout_gravity="center"
                     android:src="@drawable/ic_add" />
             </androidx.cardview.widget.CardView>
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/profile_image_view"
+                android:layout_width="@dimen/_250sdp"
+                android:layout_height="@dimen/_250sdp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:clickable="true"
+                android:focusable="true"
+                android:src="@drawable/ic_add"
+                android:visibility="gone"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
