--- a/app/src/main/res/layout/activity_complete_profile.xml
+++ b/app/src/main/res/layout/activity_complete_profile.xml
@@ -364,14 +364,15 @@
                         android:src="@drawable/ic_add"
                         android:visibility="gone"/>
 
-                    <TextView
+                    <EditText
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:fontFamily="@font/sf_pro_rounded_regular"
-                        android:text="@string/caption_for_the_photo"
+                        android:hint="@string/caption_for_the_photo"
                         android:textColor="#B0ADAD"
-                        android:textSize="@dimen/_16ssp" />
+                        android:textSize="@dimen/_16ssp"
+                        android:background="@null"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
         </RelativeLayout>
@@ -481,14 +482,15 @@
                         android:src="@drawable/ic_add"
                         android:visibility="gone"/>
 
-                    <TextView
+                    <EditText
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:fontFamily="@font/sf_pro_rounded_regular"
-                        android:text="@string/caption_for_the_photo"
+                        android:hint="@string/caption_for_the_photo"
                         android:textColor="#B0ADAD"
-                        android:textSize="@dimen/_16ssp" />
+                        android:textSize="@dimen/_16ssp"
+                        android:background="@null"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
         </RelativeLayout>
@@ -598,14 +600,15 @@
                         android:src="@drawable/ic_add"
                         android:visibility="gone"/>
 
-                    <TextView
+                    <EditText
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:fontFamily="@font/sf_pro_rounded_regular"
-                        android:text="@string/caption_for_the_photo"
+                        android:hint="@string/caption_for_the_photo"
                         android:textColor="#B0ADAD"
-                        android:textSize="@dimen/_16ssp" />
+                        android:textSize="@dimen/_16ssp"
+                        android:background="@null"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
         </RelativeLayout>
