--- a/app/src/main/res/layout/activity_complete_profile.xml
+++ b/app/src/main/res/layout/activity_complete_profile.xml
@@ -64,7 +64,8 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:visibility="visible"
-                app:cardCornerRadius="@dimen/_500sdp">
+                app:cardCornerRadius="@dimen/_500sdp"
+                app:cardBackgroundColor="@color/white">
 
                 <ImageView
                     android:layout_width="@dimen/_50sdp"
@@ -82,7 +83,7 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:src="@drawable/ic_add"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -134,7 +135,8 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/_20sdp">
+                    android:layout_marginEnd="@dimen/_20sdp"
+                    app:cardBackgroundColor="@color/white">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -263,27 +265,14 @@
             android:layout_height="wrap_content"
             android:background="@android:color/transparent">
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="@dimen/_30sdp"
-                android:layout_height="@dimen/_30sdp"
-                android:layout_alignEnd="@id/card_prompt_question_1"
-                android:layout_marginEnd="@dimen/_10sdp"
-                app:cardCornerRadius="@dimen/_100sdp">
-
-                <ImageView
-                    android:layout_width="@dimen/_20sdp"
-                    android:layout_height="@dimen/_20sdp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/ic_delete" />
-            </androidx.cardview.widget.CardView>
-
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/card_prompt_question_1"
                 style="@style/CustomCardViewStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignEnd="@id/card_image_caption_1"
-                android:layout_marginTop="@dimen/_10sdp">
+                android:layout_marginTop="@dimen/_10sdp"
+                app:cardBackgroundColor="@color/white">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -329,7 +318,8 @@
                 android:layout_marginStart="@dimen/_20sdp"
                 android:layout_marginEnd="@dimen/_20sdp"
                 android:layout_marginBottom="@dimen/_10sdp"
-                app:cardCornerRadius="@dimen/_10sdp">
+                app:cardCornerRadius="@dimen/_10sdp"
+                app:cardBackgroundColor="@color/white">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -343,9 +333,10 @@
                         android:layout_height="@dimen/_100sdp"
                         android:layout_gravity="center"
                         android:layout_marginEnd="@dimen/_10sdp"
-                        app:cardCornerRadius="@dimen/_500sdp"
                         android:clickable="true"
-                        android:focusable="true">
+                        android:focusable="true"
+                        app:cardCornerRadius="@dimen/_500sdp"
+                        app:cardBackgroundColor="@color/white">
 
                         <ImageView
                             android:layout_width="@dimen/_50sdp"
@@ -361,18 +352,18 @@
                         android:layout_gravity="center"
                         android:layout_marginEnd="@dimen/_10sdp"
                         android:src="@drawable/ic_add"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
 
                     <EditText
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:background="@null"
                         android:fontFamily="@font/sf_pro_rounded_regular"
                         android:hint="@string/caption_for_the_photo"
                         android:textColor="@color/black"
                         android:textColorHint="#B0ADAD"
-                        android:textSize="@dimen/_16ssp"
-                        android:background="@null"/>
+                        android:textSize="@dimen/_16ssp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
         </RelativeLayout>
@@ -382,27 +373,14 @@
             android:layout_height="wrap_content"
             android:background="@android:color/transparent">
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="@dimen/_30sdp"
-                android:layout_height="@dimen/_30sdp"
-                android:layout_alignStart="@id/card_prompt_question_2"
-                android:layout_marginStart="@dimen/_10sdp"
-                app:cardCornerRadius="@dimen/_100sdp">
-
-                <ImageView
-                    android:layout_width="@dimen/_20sdp"
-                    android:layout_height="@dimen/_20sdp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/ic_delete" />
-            </androidx.cardview.widget.CardView>
-
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/card_prompt_question_2"
                 style="@style/CustomCardViewStyle1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignStart="@id/card_image_caption_2"
-                android:layout_marginTop="@dimen/_10sdp">
+                android:layout_marginTop="@dimen/_10sdp"
+                app:cardBackgroundColor="@color/white">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -448,7 +426,8 @@
                 android:layout_marginStart="@dimen/_20sdp"
                 android:layout_marginEnd="@dimen/_20sdp"
                 android:layout_marginBottom="@dimen/_10sdp"
-                app:cardCornerRadius="@dimen/_10sdp">
+                app:cardCornerRadius="@dimen/_10sdp"
+                app:cardBackgroundColor="@color/white">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -462,9 +441,10 @@
                         android:layout_height="@dimen/_100sdp"
                         android:layout_gravity="center"
                         android:layout_marginEnd="@dimen/_10sdp"
-                        app:cardCornerRadius="@dimen/_500sdp"
                         android:clickable="true"
-                        android:focusable="true">
+                        android:focusable="true"
+                        app:cardCornerRadius="@dimen/_500sdp"
+                        app:cardBackgroundColor="@color/white">
 
                         <ImageView
                             android:layout_width="@dimen/_50sdp"
@@ -480,18 +460,18 @@
                         android:layout_gravity="center"
                         android:layout_marginEnd="@dimen/_10sdp"
                         android:src="@drawable/ic_add"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
 
                     <EditText
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:background="@null"
                         android:fontFamily="@font/sf_pro_rounded_regular"
                         android:hint="@string/caption_for_the_photo"
                         android:textColor="@color/black"
                         android:textColorHint="#B0ADAD"
-                        android:textSize="@dimen/_16ssp"
-                        android:background="@null"/>
+                        android:textSize="@dimen/_16ssp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
         </RelativeLayout>
@@ -501,27 +481,14 @@
             android:layout_height="wrap_content"
             android:background="@android:color/transparent">
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="@dimen/_30sdp"
-                android:layout_height="@dimen/_30sdp"
-                android:layout_alignEnd="@id/card_prompt_question_3"
-                android:layout_marginEnd="@dimen/_10sdp"
-                app:cardCornerRadius="@dimen/_100sdp">
-
-                <ImageView
-                    android:layout_width="@dimen/_20sdp"
-                    android:layout_height="@dimen/_20sdp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/ic_delete" />
-            </androidx.cardview.widget.CardView>
-
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/card_prompt_question_3"
                 style="@style/CustomCardViewStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignEnd="@id/card_image_caption_3"
-                android:layout_marginTop="@dimen/_10sdp">
+                android:layout_marginTop="@dimen/_10sdp"
+                app:cardBackgroundColor="@color/white">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -567,7 +534,8 @@
                 android:layout_marginStart="@dimen/_20sdp"
                 android:layout_marginEnd="@dimen/_20sdp"
                 android:layout_marginBottom="@dimen/_20sdp"
-                app:cardCornerRadius="@dimen/_10sdp">
+                app:cardCornerRadius="@dimen/_10sdp"
+                app:cardBackgroundColor="@color/white">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -581,9 +549,10 @@
                         android:layout_height="@dimen/_100sdp"
                         android:layout_gravity="center"
                         android:layout_marginEnd="@dimen/_10sdp"
-                        app:cardCornerRadius="@dimen/_500sdp"
                         android:clickable="true"
-                        android:focusable="true">
+                        android:focusable="true"
+                        app:cardCornerRadius="@dimen/_500sdp"
+                        app:cardBackgroundColor="@color/white">
 
                         <ImageView
                             android:layout_width="@dimen/_50sdp"
@@ -599,18 +568,18 @@
                         android:layout_gravity="center"
                         android:layout_marginEnd="@dimen/_10sdp"
                         android:src="@drawable/ic_add"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
 
                     <EditText
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:background="@null"
                         android:fontFamily="@font/sf_pro_rounded_regular"
                         android:hint="@string/caption_for_the_photo"
                         android:textColor="@color/black"
                         android:textColorHint="#B0ADAD"
-                        android:textSize="@dimen/_16ssp"
-                        android:background="@null"/>
+                        android:textSize="@dimen/_16ssp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
         </RelativeLayout>
