--- a/app/src/main/res/layout/activity_complete_profile.xml
+++ b/app/src/main/res/layout/activity_complete_profile.xml
@@ -254,6 +254,8 @@
                     android:fontFamily="@font/sf_pro_rounded_regular"
                     android:hint="@string/please_fill_in_about_yourself"
                     android:inputType="text"
+                    android:textColor="@color/black"
+                    android:textColorHint="#B0ADAD"
                     android:textSize="@dimen/_14ssp" />
             </LinearLayout>
         </LinearLayout>
@@ -353,6 +355,7 @@
                         android:visibility="gone" />
 
                     <EditText
+                        android:id="@+id/first_image_caption"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -461,6 +464,7 @@
                         android:visibility="gone" />
 
                     <EditText
+                        android:id="@+id/second_image_caption"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -569,6 +573,7 @@
                         android:visibility="gone" />
 
                     <EditText
+                        android:id="@+id/third_image_caption"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
