--- a/app/src/main/res/layout/fragment_prompt_answer.xml
+++ b/app/src/main/res/layout/fragment_prompt_answer.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:orientation="vertical"
     tools:context=".views.prompt.PromptAnswerFragment">
@@ -33,15 +33,16 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_150sdp"
         android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_10sdp">
+        android:layout_marginEnd="@dimen/_10sdp"
+        app:cardBackgroundColor="@color/white">
         <EditText
             android:id="@+id/edittext_answer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLength="150"
-            android:paddingStart="@dimen/_20sdp"
-            android:paddingEnd="@dimen/_20sdp"
-            android:paddingTop="@dimen/_10sdp"
+            android:paddingStart="@dimen/_10sdp"
+            android:paddingEnd="@dimen/_10sdp"
+            android:layout_gravity="center"
             android:background="@null"
             android:textSize="@dimen/_16ssp"
             android:textColor="@color/black"
