--- a/app/src/main/res/layout/row_prompt.xml
+++ b/app/src/main/res/layout/row_prompt.xml
@@ -30,6 +30,8 @@
             android:text="Prompt 1"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="@dimen/_15ssp" />
+            android:textSize="@dimen/_15ssp"
+            android:clickable="true"
+            android:focusable="true"/>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
