--- a/app/src/main/res/layout/fragment_prompt_answer.xml
+++ b/app/src/main/res/layout/fragment_prompt_answer.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:text="Prompt 1"
         android:textColor="@color/black"
-        android:textSize="@dimen/_16ssp"
+        android:textSize="@dimen/_20ssp"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginBottom="@dimen/_5sdp"
         android:layout_marginTop="@dimen/_50sdp"
@@ -31,24 +31,44 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_150sdp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_10sdp"
         app:cardBackgroundColor="@color/white">
-        <EditText
-            android:id="@+id/edittext_answer"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:maxLength="150"
-            android:paddingStart="@dimen/_10sdp"
-            android:paddingEnd="@dimen/_10sdp"
-            android:layout_gravity="center"
-            android:background="@null"
-            android:textSize="@dimen/_16ssp"
-            android:textColor="@color/black"
-            android:hint="@string/lorem_ipsum"
-            android:textColorHint="#CECECE"
-            android:inputType="text"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <EditText
+                android:id="@+id/edittext_answer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxLength="150"
+                android:layout_margin="@dimen/_10sdp"
+                android:background="@null"
+                android:textSize="@dimen/_16ssp"
+                android:textColor="@color/black"
+                android:hint="@string/lorem_ipsum"
+                android:textColorHint="#CECECE"
+                android:inputType="text"/>
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/button_save_prompt_answer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/button_background_gradient_dark"
+                    android:text="Save"
+                    android:textColor="@color/white"
+                    android:padding="@dimen/_5sdp"
+                    android:textSize="@dimen/_20ssp"
+                    android:textAlignment="center"
+                    android:clickable="true"
+                    android:focusable="true"/>
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
