UI done - SettingsFragment

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingTop="@dimen/_30sdp"
+    android:paddingStart="@dimen/_20sdp"
+    android:paddingEnd="@dimen/_20sdp"
     android:background="@color/white"
+    android:orientation="vertical"
     tools:context=".views.home.HomeFragment">
 
     <TextView
@@ -13,4 +18,4 @@
         android:textSize="@dimen/_20sdp"
         android:gravity="center"/>
 
-</FrameLayout>
+</LinearLayout>
