Elevation added and item activated and deactivated color changed - BottomNavigationBar

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:itemIconTint="@color/indicatioractive"
-        app:itemTextColor="@color/black"
-        app:menu="@menu/bottom_nav_menu"/>
+        app:itemIconTint="@drawable/bottom_nav_bar"
+        app:itemTextColor="@drawable/bottom_nav_bar"
+        app:menu="@menu/bottom_nav_menu"
+        android:elevation="@dimen/_10sdp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
